# Garcold_ERP

./: .gitignore  README.md  config.yml  pyproject.toml
app/: app_containers.py  main.py
app/utils/: security.py
app/utils/database/: __init__.py  db_connector.py
app/v1_0/: v1_containers.py  v1_router.py
app/v1_0/entities/: __init__.py  bancoDTO.py  categoria_gastoDTO.py  clienteDTO.py  compraDTO.py  creditoDTO.py  detalle_compraDTO.py  detalle_pago_compraDTO.py  detalle_pago_ventaDTO.py  detalle_utilidadesDTO.py  detalle_ventaDTO.py  estadoDTO.py  gastoDTO.py  inversionDTO.py  productoDTO.py  proveedorDTO.py  transaccionDTO.py  userDTO.py  utilidadDTO.py  ventaDTO.py
app/v1_0/models/: __init__.py  banco.py  categoria_gastos.py  cliente.py  compra.py  credito.py  detalle_compra.py  detalle_pago_compra.py  detalle_pago_venta.py  detalle_utilidad.py  detalle_venta.py  estado.py  gasto.py  inversion.py  producto.py  proveedor.py  tipo_transaccion.py  transaccion.py  user.py  utilidad.py  venta.py
app/v1_0/repositories/: __init__.py  banco_repository.py  base_repository.py  categoria_gasto_repository.py  cliente_repository.py  compra_repository.py  credito_repository.py  detalle_compra_repository.py  detalle_pago_compra_repository.py  detalle_pago_venta_repository.py  detalle_utilidad_repository.py  detalle_venta_repository.py  estado_repository.py  gasto_repository.py  inversion_repository.py  producto_repository.py  proveedor_repository.py  tipo_transaccion_repository.py  transaccion_repository.py  user_repository.py  (+2 more)
scripts/: run-backend.sh
(+46 files in other folders)
