[project]
name = "garcold-pos-backend"
version = "0.1.0"
description = "This is a FastAPI application that handles the business logic of tienda garcold"
authors = [
    {name = "Dan",email = "treshy342@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "dependency-injector[yaml] (>=4.45.0,<5.0.0)",
    "aiocron (>=2.1,<3.0)",
    "httplib2 (>=0.22.0,<0.23.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "httpcore (>=1.0.9,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"

